# clipper_plugin

./: .gitignore  CMakeLists.txt  README.md  SECURITY.md  verify_vs_tdr.py
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/dsp/: ClipperChain.h  EnvelopeFollower.h  LinkedShelf.h  LookaheadLimiter.h  Shaper.h
tests/: limiter_lookahead_test.cpp  limiter_threshold_smooth_test.cpp
